--- a/styles.css
+++ b/styles.css
@@ -518,8 +518,8 @@ body {
   color: #28c76f;
 }
 .dashboard-card .icon.total-tickets {
-  background-color: #cdf5dc;
-  color: #28c76f;
+  background-color: #95c6ff;
+  color: #123aff;
 }
 .dashboard-card .info {
   padding-right: 70px;
@@ -626,7 +626,7 @@ body {
   display: flex;
   align-items: center;
   gap: 8px;
-  font-size: 14px;
+  font-size: 18px;
 }
 .pagination a {
   color: var(--primary-color);
